# ansible-miarec

./: .ansible-lint  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  all-in-one-hosts.sample  all-in-one-local.sample  ansible.cfg  change-db-password.yml  configure-firewall.yml  create-ssl-cert.yml  decoupled-hosts.sample  hosts.sample  prepare-hosts.yml  private-tls.yml  provision-all.yml  pyproject.toml  setup-miarec.yml
.github/workflows/: ci.yml
docs/examples/: all-in-one-hosts.sample  all-in-one-local.sample  decoupled-hosts.sample
molecule/: README.md
molecule/default/: collections.yml  converge.yml  molecule.yml  prepare.yml  test-requirements.txt
molecule/default/tests/: test_defaults.py  test_miarec.py  test_miarecweb.py
tests/centos6-all-in-one/: Vagrantfile  hosts  prepare-hosts.yml  setup-miarec.yml
tests/centos7-all-in-one/: Vagrantfile  hosts  prepare-hosts.yml  setup-miarec.yml
tests/centos7-multiple-servers/: Vagrantfile  ansible.cfg  configure-firewall.yml  hosts  prepare-hosts.yml  setup-miarec.yml
tests/centos7-multiple-servers/vars/: postgresql.yml  recorder.yml  redis.yml  web.yml
tests/ubuntu14.04-all-in-one/: Vagrantfile  hosts  prepare-hosts.yml  setup-miarec.yml
tests/ubuntu16.04-all-in-one/: Vagrantfile  ansible.cfg  hosts  prepare-hosts.yml  setup-miarec.yml
vars/: .gitignore  apache.yml  custom.yml.sample  db.yml  firewall.yml  iptables.yml  monitor.yml  postgresql.yml  python.yml  redis.yml  secrets.yml.sample  web.yml
